--- a/views/authentication/login.hbs
+++ b/views/authentication/login.hbs
@@ -16,7 +16,7 @@
                 <main class="col-md-8 card p-0">
                     <section class="card-block">
                         <h4>Was ist unser Ziel?</h4>
-                        <img src="/images/login-left.png" alt="Schul-Cloud Illustration #1" class="pull-right illustration">
+                        <img src="/images/login-left-cropped.png" alt="Schul-Cloud Illustration #1" class="pull-right illustration">
                         <p>Wir wollen eine moderne Lern- und Lehrinfrastruktur schaffen, da diese unabdingbar ist, um die digitale Transformation im Bildungssektor zum Erfolg zu führen und Kinder schon im Schulalter optimal auf das Leben in einer zunehmend digitalisierten Gesellschaft vorzubereiten.</p>
 
                         <h4>Was ist die Herausforderung?</h4>
@@ -24,7 +24,7 @@
 
                         <h4>Was ist unsere Idee?</h4>
                         <p>Das Hasso-Plattner-Institut startete in Kooperation mit dem Bundesministerium für Bildung und Forschung (BMBF) und dem bundesweiten Exzellenznetzwerk mathematisch-naturwissenschaftlicher Schulen (MINT-EC) das Pilotprojekt "Schul-Cloud". Die vom Hasso-Plattner-Institut konzipierte Cloud-Infrastruktur wird dabei helfen, Schüler/innen, Lehrkräften und Eltern einen einfachen Zugang zu Lern- und Lehrmaterial bereitzustellen, der für alle, überall und jederzeit verfügbar ist. </p>
-                        <img src="/images/login-right.png" alt="Schul-Cloud Illustration #1" class="pull-left illustration">
+                        <img src="/images/login-right-cropped.png" alt="Schul-Cloud Illustration #1" class="pull-left illustration">
                         <p>Da digitale Medien und Techniken für alle Unterrichtsfächer wertvolle Angebote bieten, müssen sie allen Schüler/innen zur Verfügung stehen. Neue technische Entwicklungen sind in Schulen leicht abbildbar: Die Einrichtung einer Schul-Cloud bietet eine zukunftsorientierte Lösung, um Schüler/innen die Möglichkeit zu geben, flächendeckend neueste und professionell gewartete Programme zu nutzen.</p>
 
                         <h4>Wie funktioniert die Schul-Cloud?</h4>
