--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -4,7 +4,10 @@
             <a id="title" class="pull-left" href="/">Schul-Cloud</a>
             <ul class="nav navbar-nav pull-right">
                 <li class="nav-item">
-                    <a class="nav-link" href="https://blog.schul-cloud.org/" target="_blank">Blog</a>
+                    <a class="nav-link" href="/partner">Partner</a>
+                </li
+                ><li class="nav-item">
+                    <a class="nav-link" href="https://blog.schul-cloud.org/" target="scblog">Blog</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://blog.schul-cloud.org/faq" target="_blank">FAQ</a>
