--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -2,18 +2,22 @@
     <div class="container">
         <div class="row">  
             <div  class="col-md-4">        
-                <h4></h4>
-            </div>
-            <div  class="col-md-4">        
-                lala
-            </div>
-            <div  class="col-md-4">        
                 <h4>Kontakt</h4>
-                <p>
-                    Allgemeine Anfragen: info@schul-cloud.org
-                    Inhalteanbieter: inhalte@schul-cloud.org
-                    Datenschutz: datenschutz@schul-cloud.org
-                </p>
+                <ul>
+                    <li>Allgemeine Anfragen: <a href="mailto:info@schul-cloud.org" target:"_blank">info@schul-cloud.org</a></li>
+                    <li>Inhalteanbieter: <a href="mailto:inhalte@schul-cloud.org" target:"_blank">inhalte@schul-cloud.org</a></li>
+                    <li>Datenschutz: <a href="mailto:datenschutz@schul-cloud.org" target:"_blank">datenschutz@schul-cloud.org</a></li>
+                </ul>
+            </div>
+            <div  class="col-md-4">        
+                <h4>Links</h4>
+                <ul>
+                    <li><a href="https://hpi.de/impressum.html" target="blank">Impressum</a></li>
+                    <li><a href="/partner">Partner</a></li>
+                </ul>
+            </div>
+            <div  class="col-md-4">        
+                <h4></h4>
             </div>
         </div>
     </div>
