--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -3,14 +3,17 @@
         <nav class="navbar-light">
             <a id="title" class="pull-left" href="/">Schul-Cloud</a>
             <ul class="nav navbar-nav pull-right">
-                <li class="nav-item">
+                <li class="nav-item hidden-sm-down">
                     <a class="nav-link" href="/partner">Partner</a>
-                </li
-                ><li class="nav-item">
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="https://blog.schul-cloud.org/" target="scblog">Blog</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://blog.schul-cloud.org/faq" target="_blank">FAQ</a>
+                </li>
+                <li class="nav-item hidden-sm-up">
+                    <a class="nav-link" href="#loginarea">Login</a>
                 </li>
             </ul>
         </nav>
