--- a/views/partner/partner_guests.hbs
+++ b/views/partner/partner_guests.hbs
@@ -24,6 +24,7 @@
 
             {{#embed "partner/partner"}}{{/embed}}
         </div>
+        {{#embed "lib/extended_footer"}}{{/embed}}
     {{/content}}
 
     {{#content "scripts" mode="append"}}
