--- a/views/partner/partner_guests.hbs
+++ b/views/partner/partner_guests.hbs
@@ -10,7 +10,7 @@
             .partner-box {
                 background: white;
             }
-            a[href='/partner']{
+            header a[href='/partner']{
                 background-color: #f8a41b;
             }
         </style>
