add helpdesk site for helpdesk users

--- a/views/administration/forms/form-problem.hbs
+++ b/views/administration/forms/form-problem.hbs
@@ -7,15 +7,15 @@
 
 <div class="form-group">
     <label>Ist-Zustand</label>
-    <textarea class="form-control" name="currentState" type="text" cols="50" rows="6" disabled/>
+    <textarea class="form-control" name="currentState" type="text" cols="50" rows="6" disabled></textarea>
 </div>
 
 <div class="form-group">
     <label>Soll-Zustand</label>
-    <textarea class="form-control" name="targetState" type="text" cols="50" rows="6" disabled/>
+    <textarea class="form-control" name="targetState" type="text" cols="50" rows="6" disabled></textarea>
 </div>
 
 <div class="form-group">
     <label>Anmerkungen</label>
-    <textarea class="form-control" name="notes" type="text" cols="50" rows="6"/>
+    <textarea class="form-control" name="notes" type="text" cols="50" rows="6"></textarea>
 </div>
