--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -64,7 +64,7 @@
                             <ul class="list-group list-group-flush">
                                 {{#each blogFeed}}
                                     <li class="list-group-item">
-                                        <a href="{{this.link}}">
+                                        <a href="{{this.link}}" target="scblog">
                                             {{this.title}}
                                         </a></br>
                                         <small>von {{this.dc:creator}} am {{this.pubDate}}</small>
