--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="https://hpi.de/impressum.html" target="blank">Impressum</a></li>
                     <li><a href="/partner">Partner</a></li>
-                    <li><a href="https://github.com/schul-cloud/">GitHub</a></li>
+                    <li><a href="https://github.com/schul-cloud/" target="_blank">GitHub</a></li>
                 </ul>
             </div>
             <div  class="col-md-4">        
