change grades in overview

--- a/views/homework/components/overview_card_template.hbs
+++ b/views/homework/components/overview_card_template.hbs
@@ -24,11 +24,7 @@
                     </span>
                     <span>
                         {{#if this.averageRating}}
-                            {{#if this.courseId.gradeSystem}}
-                                Ø: {{this.averageRating}}
-                            {{else}}
-                                Ø: {{this.averageRating}} Punkte
-                            {{/if}}
+                            Ø: {{this.averageRating}}%
                         {{else}}
                             Ø: -
                         {{/if}}
