--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -30,8 +30,8 @@
                                 <a href="/files/file/"
                                    target="_blank"
                                    data-method="delete"
-                                   data-file-name="{{this.name}}"
-                                   data-file-path="{{this.path}}">
+                                   data-file-name="{{../this.name}}"
+                                   data-file-path="{{../this.path}}">
                                     <i class="fa fa-trash-o"></i>
                                 </a>
                                 {{/userHasPermission}}
