--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -87,23 +87,30 @@
                         </div>
                     </section>
                     <section class="section-news">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-sm-12 no-padding"><h5>Neuigkeiten</h5></div>
-                        </div>
-                        <div class="row articles">
-                            <div class="card-group">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-sm-12"><h5>Neuigkeiten</h5></div>
+                            </div>
+                            <div class="row tasks card-deck-row">
                                 {{#each news}}
-                                    <div class="card card-block"><strong class="card-text">{{title}}</strong>
-                                        <p class="card-text">{{{truncate content}}}</p>
-                                        <p class="card-text">
-                                            <small class="text-muted">{{timeString}}</small>
-                                        </p>
-                                        <a href="{{url}}">Weiterlesen</a>
+                                    <div class="col-md-4 col-sm-6 col-xs-12">
+                                        <article class="card h-100">
+                                            <div class="card-block assignment">
+                                                <div class="card-text">
+                                                    <small class="text-muted">{{timeString}}</small>
+                                                </div>
+
+                                                <div class="card-text"><strong>{{title}}</strong></div>
+                                                <div class="card-text description">
+                                                    {{{truncateHTML (conflictFreeHtml content)}}}
+                                                </div>
                                             </div>
-                                        {{/each}}
+                                            <div class="card-footer">
+                                                <a class="btn btn-primary btn-block" href="{{url}}" rel="canonical">Weiterlesen</a>
+                                            </div>
+                                        </article>
                                     </div>
-                                </div>
+                                {{/each}}
                             </div>
                         </div>
                     </section>
