change font and add weight

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -239,8 +239,8 @@ header {
     }
 
     marquee {
-        font-family: Impact;
-        letter-spacing: 1px
+        padding-top: 7px;
+        font-weight: 900;
     }
 }
 
