moved also the news to the new template

--- a/static/styles/dashboard/dashboard.scss
+++ b/static/styles/dashboard/dashboard.scss
@@ -41,6 +41,10 @@
     }
 }
 
+.section{
+    clear: both;
+}
+
 .section-messages {
     width:100%;
     float:left;
@@ -75,7 +79,6 @@
         margin-right:10px;
     }
 }
-
 
 .section-timetable {
     width: 100%;
