--- a/views/dashboard/components/card_section.hbs
+++ b/views/dashboard/components/card_section.hbs
@@ -1,7 +1,7 @@
 <section class="section section-{{section-id}}">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-12"><h5>{{title}}{{link-text}}</h5></div>
+            <div class="col-sm-12"><h5>{{title}}</h5></div>
         </div>
         <div class="row tasks card-deck-row">
             {{#each content}}
