changed class name

--- a/views/dashboard/components/card_template.hbs
+++ b/views/dashboard/components/card_template.hbs
@@ -6,7 +6,7 @@
             </div>
 
             <div class="card-text"><strong>{{{this.title}}}</strong></div>
-            <div class="card-text description">
+            <div class="card-text ckcontent">
                 {{{truncateHTML (conflictFreeHtml this.content)}}}
             </div>
         </div>
