--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -1,6 +1,6 @@
 <section id="extended" class="tab-content section-homeworkdetails active">
 <div class="homework">
-    <div class="description">
+    <div class="ckcontent">
         {{#if this.description}}
             {{{this.description}}}
         {{else}}
