--- a/views/homework/components/overview_card_template.hbs
+++ b/views/homework/components/overview_card_template.hbs
@@ -44,7 +44,7 @@
             {{/if}}
             {{this.name}}
         </h5>
-        <div class="description">
+        <div class="ckcontent">
             {{#if this.description}}
                 {{{truncateHTML (conflictFreeHtml this.description)}}}
             {{else}}
