edit/delete button added

--- a/static/styles/news/news.scss
+++ b/static/styles/news/news.scss
@@ -10,4 +10,18 @@
     p:last-of-type{
         margin-bottom:0;
     }
+    .left-btn-group{
+        white-space: nowrap;
+        display: inherit;
+        a{
+            padding-left: .5rem;
+            padding-right: .5rem;
+            vertical-align: middle;
+        }
+    }
+    .more{
+        display: inline-block;
+        width: 100%;
+        text-align: center;
+    }
 }
