--- a/views/homework/components/overview_card_template.hbs
+++ b/views/homework/components/overview_card_template.hbs
@@ -65,7 +65,7 @@
                         <i class="fa fa-{{this.icon}}"></i>
                     </a>
             {{else}}
-                <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}" alt="Aufgabe '{{../name}}' {{this.alt}}.">
+                <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}" alt="Aufgabe '{{../../name}}' {{this.alt}}.">
                     <i class="fa fa-{{this.icon}}"></i> {{this.label}}
                 </a>
             {{/if}}
