--- a/views/news/overview.hbs
+++ b/views/news/overview.hbs
@@ -9,5 +9,17 @@
                 {{> "lib/components/pagination" settings=pagination }}
             </div>
         </div>
+        {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
+            {{#content "body"}}
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary btn-close">
+                        Abbrechen
+                    </button>
+                    <button type="submit" class="btn btn-primary btn-submit">
+                        Löschen
+                    </button>
+                </div>
+            {{/content}}
+        {{/embed}}
     {{/content}}
 {{/extend}}
