--- a/static/styles/dashboard/dashboard.scss
+++ b/static/styles/dashboard/dashboard.scss
@@ -44,6 +44,10 @@
 .section{
     clear: both;
 }
+.more.btn.btn-primary {
+    width: 100%;
+    margin-left: 0 !important;
+}
 
 .section-messages {
     width:100%;
