--- a/views/dashboard/components/card_template.hbs
+++ b/views/dashboard/components/card_template.hbs
@@ -1,4 +1,4 @@
-<div class="col-md-4 col-sm-6 col-xs-12">
+<div class="col-lg-4 col-md-6 col-sm-12">
     <article class="card h-100">
         <div class="card-block">
             <div class="pull-right">
