added creator & updater & design fixes
:warning: populate geht nicht :warning:

--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -212,6 +212,8 @@ form.inline {
     h2 {font-size: 1.2rem;font-weight:bold;font-style:italic}
     h3 {font-size: 1.1rem;font-style:italic;text-decoration:underline}
     p  {font-size: 1rem;margin-bottom:.25rem;}
+    img, video{max-width: 100%;}
+    table{display: block; max-width:100%; overflow: auto;}
     blockquote{
       color: grey;
       margin-left: 1rem;
