--- a/views/content/search-results.hbs
+++ b/views/content/search-results.hbs
@@ -5,26 +5,30 @@
     {{/content}}
 
     {{#content "page"}}
-        <section class="store container-fluid">
+        <section class="store container">
 
             <div class="row">
                 <div class="col-sm-12">
                     {{> "content/forms/form-search" }}
                     {{#if query }}
-                        <h5>Suchergebnisse für "{{ query }}"</h5>
+                        {{#if searchResults}}
+                            <h5>Suchergebnisse für "{{ query }}"</h5>
+                        {{else}}
+                            <h5>Es wurden keine Suchergebnisse für "{{ query }}" gefunden</h5>
+                        {{/if}}
                         <hr>
                     {{/if}}
                 </div>
             </div>
 
-            <div class="row">
-                <div class="card-columns col-sm-12">
-                    {{#each searchResults}}
-                        {{#with _source}}
+            <div class="row equal-height">
+                {{#each searchResults}}
+                    {{#with _source}}
+                        <div class="col-md-6 col-lg-4">
                             {{> "content/item" }}
-                        {{/with}}
-                    {{/each}}
-                </div>
+                        </div>
+                    {{/with}}
+                {{/each}}
             </div>
 
         </section>
