--- a/views/content/store.hbs
+++ b/views/content/store.hbs
@@ -13,41 +13,27 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-sm-12">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="background: lightgrey">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class=""></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class=""></li>
-                        </ol>
-                        <div class="carousel-inner" role="listbox">
-                            <div class="carousel-item active">
-                                <img class="d-block img-fluid" src="/images/content/Cornelsen-Header.png" alt="First slide">
-                            </div>
-                        </div>
-                        <!--
-                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                        -->
-                    </div>
-                </div>
-            </div>
-
+            {{#with featuredContent}}
             <h3>Featured Content</h3>
-            <div class="row">
-                <div class="card-columns col-sm-12">
-                    {{#each featuredContent}}
+            <div class="row equal-height">
+                {{#each this}}
+                    <div class="col-md-6 col-lg-4">
                         {{> "content/item" }}
-                    {{/each}}
-                </div>
+                    </div>
+                {{/each}}
             </div>
+            {{/with}}
+
+            {{#with trendingContent}}
+            <h3>Trending Content</h3>
+            <div class="row equal-height">
+                {{#each this}}
+                    <div class="col-md-6 col-lg-4">
+                        {{> "content/item" }}
+                    </div>
+                {{/each}}
+            </div>
+            {{/with}}
 
         </section>
 
