--- a/views/calendar/calendar.hbs
+++ b/views/calendar/calendar.hbs
@@ -25,7 +25,7 @@
         </div>
 
         {{#userHasPermission "CALENDAR_EVENT_CREATE"}}
-        {{#embed "lib/components/modal-form" class="create-event-modal" action="/calendar/events/" collapseId=1}}
+        {{#embed "lib/components/modal-form" class="create-event-modal" action="/calendar/events/" collapseId=1 userId=../userId}}
             {{#content "fields"}}
                 {{> "calendar/forms/form-create-event"}}
             {{/content}}
