remove close button and change link to button

--- a/views/lib/forms/form-features.hbs
+++ b/views/lib/forms/form-features.hbs
@@ -4,12 +4,14 @@
     <div>
         Es gibt neue Features in der Schul-Cloud.
         <br>
-        Für weitere Informationen folgen Sie doch bitte diesem <a href="/help/#changelog">Link</a>.
+        Für weitere Informationen klicken Sie doch bitte diesen Button
     </div>
 </div>
 <div style="text-align: center; padding-top: 8px;">
-    <button type="button" class="btn btn-secondary btn-close" style="width: 95%;">
-        {{closeLabel}}
+    <a href="/help/#changelog">
+    <button class="btn btn-primary btn-add" style="width: 95%;">
+        Hier klicken
     </button>
+    </a>
 </div>
 </div>
