--- a/views/authentication/home.hbs
+++ b/views/authentication/home.hbs
@@ -56,6 +56,7 @@
                     </section>
                 </main>
                 <aside class="col-md-4">
+                    {{> "authentication/forms/demo-login"}}
                     {{> "authentication/forms/login"}}
 
                     <section id="blogfeed" class="card">
