--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -72,9 +72,9 @@
 
         {{#ifeq currentRole "Demo"}}
             <section class="demo">
-            <div class="alert alert-warning" role="alert">
-                <marquee>Dies ist ein Demoaccount. Sämtliche Aktionen die Daten anlegen oder ändern sind deaktiviert und nicht sichtbar.</marquee>
-            </div>
+                <div class="alert alert-warning" role="alert">
+                    <p>Dies ist ein Demoaccount. Sämtliche Aktionen, die Daten anlegen oder ändern, sind deaktiviert und nicht sichtbar.</p>
+                </div>
             </section>
         {{/ifeq}}
 
