--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -42,14 +42,15 @@
                             <div id="topic-list">
                             {{#each lessons}}
                                 {{#unless this.hidden}}
-                                    <div class="card card-topic" onclick="location.href='{{this.url}}'" 
+                                    <!-- TOPIC IS NOT HIDDEN, teacher and student has access -->
+                                    <div class="card card-topic" onclick="location.href='{{this.url}}'"
                                     {{#userHasPermission "COURSE_EDIT"}}data-topicId="{{../_id}}"{{/userHasPermission}}>
                                         <div class="card-header">
                                             <div class="input-group">
                                                 {{#userHasPermission "COURSE_EDIT"}}
                                                     <a 
                                                         class="btn btn-secondary btn-sm btn-hidden-toggle" 
-                                                        href="{{../_id}}" 
+                                                        href="{{../_id}}"
                                                         data-toggle="tooltip" 
                                                         title="Thema verstecken">
                                                          <i class="fa fa-eye"></i>
@@ -76,8 +77,9 @@
                                         </div>
                                     </div>
                                 {{else}}
+                                    <!-- TOPIC IS HIDDEN, just teacher has access -->
                                     {{#userHasPermission "COURSE_EDIT"}}
-                                        <div class="card card-topic" onclick="location.href='{{this.url}}'" 
+                                        <div class="card card-topic" onclick="location.href='{{../url}}'"
                                         data-topicId="{{../_id}}">
                                             <div class="card-header">
                                                 <div class="input-group">
@@ -88,7 +90,7 @@
                                                         title="Thema sichtbar machen">
                                                         <i class="fa fa-eye-slash"></i>
                                                     </a>
-                                                    <p class="topic-label ml-1">{{this.name}}</p>
+                                                    <p class="topic-label ml-1">{{../name}}</p>
                                                     <div class="right-btn-group">
                                                         <a class="delete-topic btn btn-sm"
                                                            href="/courses/{{../courseId}}/topics/{{../_id}}"
