--- a/static/styles/dashboard/dashboard.scss
+++ b/static/styles/dashboard/dashboard.scss
@@ -209,3 +209,10 @@
         margin-right: 0px;
     }
 }
+
+.poll {
+    text-align: center;
+    padding-top: 8px;
+    padding-left: 8px;
+    padding-right: 8px;
+}
