--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -4,6 +4,10 @@
         <link rel="stylesheet" href="/styles/dashboard/dashboard.css"/>
     {{/content}}
 
+    {{#content "scripts" mode="append"}}
+        <script type="text/javascript" src="/scripts/dashboard.js" defer></script>
+    {{/content}}
+
     {{#content "page"}}
         <div class="row mobile-no-margin-right">
             <div class="row">
@@ -114,5 +118,12 @@
                 </div>
             </div>
         </div>
+
+        {{#embed "lib/components/modal" class="poll-modal"}}
+            {{#content "body"}}
+                {{> "lib/forms/form-poll"}}
+            {{/content}}
+        {{/embed}}
+
     {{/content}}
 {{/extend}}
