--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -4,9 +4,35 @@
         <link rel="stylesheet" href="/styles/help/help.css"/>
     {{/content}}
 
+    {{#content "scripts" mode="append"}}
+        <script type="text/javascript" src="/scripts/dashboard.js" defer></script>
+    {{/content}}
+
     {{#content "page"}}
         <section class="faqpanel">
             <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <div class="card" style="text-align: center">
+                            <div class="card-block">
+                                <div class="card-text">
+                                    <h4 class="card-title">Befragung I im Projekt Schul-Cloud</h4>
+                                    <p class="card-text">
+                                        Im Rahmen der Pilotphase I im Projekt Schul-Cloud möchten wir Sie bitten, an unserer circa 30-minütigen Online-Befragung teilzunehmen. Mit Hilfe der Befragung sollen Erwartungshaltungen und Erfolgsfaktoren gegenüber digitaler Medien in Schule und Unterricht allgemein und gegenüber der Schul-Cloud allgemein geprüft werden.
+                                    </p>
+                                    <p class="card-text">
+                                        Hier können Sie bei unserer Befragung teilnehmen! Vielen Dank für Ihre Mitarbeit!
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                <a href="https://tools.openhpi.de/survey/index.php?r=survey/index&sid=137936&newtest=Y&lang=de" target="_blank" >
+                                    <button class="btn btn-primary btn-poll">Zur Umfrage</button>
+                                </a>
+                            </div>
+                            </div>
+                    </div>
+                </div>
                 <div class="row">
                             <div class="col-md-4 col-sm-6 col-xs-12">
                                 <div class="card h-100">
@@ -116,7 +142,7 @@
                                             </a>
                                         </h5>
                                     </div>
-                                    <div id="collapse-{{@index}}" class="collapse {{#ifeq @index 0}}show in{{/ifeq}}"
+                                    <div id="collapse-{{@index}}" class="collapse"
                                          role="tabpanel" aria-labelledby="heading-{{@index}}" {{#ifeq @index 0}}aria-expanded="true"{{/ifeq}}>
                                         <div class="card-block">
                                             {{{this.body}}}
